Fixed: fullscreen layout issues on mobile devices
Now, zoom controls in the toolbar display as expected on mobile devices with small screens.

* In fullscreen, div.diva-tools-left now displays before div.diva-tools-right, so that layout doesn't break on small screens.

* Media queries were added to prevent the slider from pushing div.diva-tools-right off of the toolbar on small screens (less than 480px, which covers small phone-like devices.)

--- a/source/css/diva.less
+++ b/source/css/diva.less
@@ -14,6 +14,7 @@
             .hidden;
             padding: 8px;
             float: left;
+            clear: left;
         }
 
         .diva-zoom-buttons-label {
@@ -254,15 +255,23 @@
 }
 
 .zoom-slider {
-    position:relative;
-    top:0.6em;
-    display:none;
+    position: relative;
+    top: 0.6em;
+    display: none;
+    float: left;
+    @media (max-width: 480px) {
+        width: 100px;
+    }
 }
 
 .grid-slider {
-    position:relative;
-    top:0.6em;
-    display:none;
+    position: relative;
+    top: 0.6em;
+    display: none;
+    float: left;
+    @media (max-width: 480px) {
+        width: 100px;
+    }
 }
 
 // The loading indicator, shown if the AJAX request is slow
